Fix overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -46,6 +46,7 @@ input {
 .main-container {
     display: flex;
     height: 100vh;
+    overflow: hidden;
 }
 
 .flex-none {
